[gd_scene load_steps=2 format=3 uid="uid://b3i6c8iuh7ii"]

[ext_resource type="Script" path="res://addons/dialogue_nodes/editor/variables.gd" id="1_0ltmm"]

[node name="Variables" type="VBoxContainer"]
offset_right = 200.0
offset_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_0ltmm")

[node name="Title" type="Label" parent="."]
layout_mode = 2
text = "Variables"

[node name="AddButton" type="Button" parent="."]
layout_mode = 2
tooltip_text = "Add a new variable."
text = "+"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="AddButton" to="." method="_on_add_button_pressed"]
